Add template to AddShopping page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,7 +30,9 @@ $app-direction: ltr;
 $colors: (primary: (base: #039be5, contrast: black),
  secondary: (base: #43a047, contrast: black),
  dark-primary: (base: #006db3, contrast: white),
+ light-primary: (base: #63ccff, contrast: black),
  dark-secondary: (base: #00701a, contrast: white),
+ light-secondary: (base: #76d275, contrast: black),
  danger: #f53d3d, 
  light: #f4f4f4, 
  dark: #222);
